--- a/lecturer-module.html
+++ b/lecturer-module.html
@@ -44,26 +44,26 @@
             </div>
 
             <ul class="nav">
-                <li class="active">
-                    <a href="dashboard.html">
+                <li>
+                    <a href="lecturer-main.html">
                         <i class="pe-7s-home"></i>
                         <p>Home</p>
                     </a>
                 </li>
-                <li>
-                    <a href="user.html">
+                <li class="active">
+                    <a href="lecturer-module.html">
                         <i class="pe-7s-note2"></i>
                         <p>Module</p>
                     </a>
                 </li>
                 <li>
-                    <a href="table.html">
+                    <a href="lecturer-result.html">
                         <i class="pe-7s-upload"></i>
                         <p>Result</p>
                     </a>
                 </li>
                 <li>
-                    <a href="notifications.html">
+                    <a href="lecturer-notification.html">
                         <i class="pe-7s-bell"></i>
                         <p>Notifications</p>
                     </a>
@@ -163,22 +163,5 @@
 
 <!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->
 <script src="js/demo.js"></script>
-
-<script type="text/javascript">
-    $(document).ready(function () {
-
-//        	demo.initChartist();
-
-        $.notify({
-            icon: 'pe-7s-gift',
-            message: "Welcome to <b>Smart Notice Board</b>"
-
-        }, {
-            type: 'info',
-            timer: 4000
-        });
-
-    });
-</script>
 
 </html>
