--- a/lecturer-module.html
+++ b/lecturer-module.html
@@ -10,7 +10,6 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
 
-
     <!-- Bootstrap core CSS     -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
@@ -20,15 +19,18 @@
     <!--  Light Bootstrap Table core CSS    -->
     <link href="css/light-bootstrap-dashboard.css" rel="stylesheet"/>
 
-
     <!--  CSS for Demo Purpose, don't include it in your project     -->
     <link href="css/demo.css" rel="stylesheet"/>
 
 
     <!--     Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
-    <link href="css/pe-icon-7-stroke.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' type='text/css'/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="css/pe-icon-7-stroke.css"/>
+
 
 </head>
 <body>
@@ -128,6 +130,228 @@
         <div class="content">
             <div class="container-fluid">
 
+                <!-- Tabs with icons on Card -->
+                <div class="card card-nav-tabs">
+                    <div class="header header-success">
+                        <!-- colors: "header-primary", "header-info", "header-success", "header-warning", "header-danger" -->
+                        <div class="nav-tabs-navigation">
+                            <div class="nav-tabs-wrapper">
+                                <ul class="nav nav-tabs" data-tabs="tabs">
+                                    <li class="active">
+                                        <a href="#create-new" data-toggle="tab">
+                                            <i class="material-icons">note_add</i>
+                                            Create New
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#update" data-toggle="tab">
+                                            <i class="material-icons">update</i>
+                                            Update
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#view-all" data-toggle="tab">
+                                            <i class="material-icons">view_list</i>
+                                            View All
+                                        </a>
+
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <div class="tab-content">
+                            <div class="tab-pane active" id="create-new">
+                                <div class="card">
+                                    <div class="header">
+                                        <h4 class="title">Create New Module</h4>
+                                    </div>
+                                    <div class="content">
+                                        <form>
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label>Module Code</label>
+                                                        <input type="text" class="form-control" placeholder="XX0000">
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label>Module Name</label>
+                                                        <input type="text" class="form-control" placeholder="">
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label>Credits</label>
+                                                        <input type="text" class="form-control" placeholder="2.0">
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label>Batch</label>
+                                                        <select class="form-control" id="bacth">
+                                                            <option>Bsc 12</option>
+                                                            <option>Bsc 13</option>
+                                                            <option>Bsc 14</option>
+                                                            <option>Bsc 15</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label>Semester</label>
+                                                        <select class="form-control" id="semester">
+                                                            <option>Semester 1</option>
+                                                            <option>Semester 2</option>
+                                                            <option>Semester 3</option>
+                                                            <option>Semester 4</option>
+                                                            <option>Semester 5</option>
+                                                            <option>Semester 6</option>
+                                                            <option>Semester 7</option>
+                                                            <option>Semester 8</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <button type="submit" class="btn btn-info btn-fill pull-left">Create</button>
+                                            <div class="clearfix"></div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane" id="update">
+                                <div class="card">
+                                    <div class="header">
+                                        <h4 class="title">Update Module</h4>
+                                    </div>
+                                    <div class="content">
+                                        <form>
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label>Module Code</label>
+                                                        <div class="row">
+                                                            <div class="col-md-8">
+                                                                <input type="text" class="form-control" placeholder="XX0000">
+                                                            </div>
+                                                            <div class="col-md-4">
+                                                                <input type="button" class="form-control btn btn-fill btn-info" value="Search">
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label>Module Name</label>
+                                                        <input type="text" class="form-control" placeholder="">
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label>Credits</label>
+                                                        <input type="text" class="form-control" placeholder="2.0">
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label>Batch</label>
+                                                        <select class="form-control" id="bacth">
+                                                            <option>Bsc 12</option>
+                                                            <option>Bsc 13</option>
+                                                            <option>Bsc 14</option>
+                                                            <option>Bsc 15</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label>Semester</label>
+                                                        <select class="form-control" id="semester">
+                                                            <option>Semester 1</option>
+                                                            <option>Semester 2</option>
+                                                            <option>Semester 3</option>
+                                                            <option>Semester 4</option>
+                                                            <option>Semester 5</option>
+                                                            <option>Semester 6</option>
+                                                            <option>Semester 7</option>
+                                                            <option>Semester 8</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <button type="submit" class="btn btn-info btn-fill pull-left">Update</button>
+                                            <div class="clearfix"></div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane" id="view-all">
+                                <div class="card">
+                                    <div class="header">
+                                        <h4 class="title">View All Modules</h4>
+                                    </div>
+                                    <div class="content table-responsive table-full-width">
+                                        <table class="table table-hover table-striped">
+                                            <thead>
+                                            <tr><th>Code</th>
+                                                <th>Name</th>
+                                                <th>Credits</th>
+                                                <th>Batch</th>
+                                                <th>Semester</th>
+                                            </tr></thead>
+                                            <tbody>
+                                            <tr>
+                                                <td>CS001</td>
+                                                <td>Operating System</td>
+                                                <td>2.5</td>
+                                                <td>BSC15</td>
+                                                <td>Sem 2</td>
+                                            </tr>
+                                            <tr>
+                                                <td>CS002</td>
+                                                <td>Graph Theory</td>
+                                                <td>20</td>
+                                                <td>BSC15</td>
+                                                <td>Sem 3</td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- End Tabs with icons on Card -->
             </div>
         </div>
 
@@ -142,15 +366,12 @@
     </div>
 </div>
 
-
 </body>
 
 <!--   Core JS Files   -->
 <script src="js/jquery-1.10.2.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
-
-<!--  Checkbox, Radio & Switch Plugins -->
-<script src="js/bootstrap-checkbox-radio-switch.js"></script>
+<script src="js/jquery.min.js" type="text/javascript"></script>
 
 <!--  Charts Plugin -->
 <script src="js/chartist.min.js"></script>
